# ros_yolo_as_template_matching

./: .gitignore  CMakeLists.txt  README.md  main_setup.py  package.xml  requirements.txt  s0_trash_data.md  s1_main_setup.sh  s2_train.sh  s3_inference_images.sh  s4_inference_one_image.sh
config/: config.py  config.yaml  yolo_config.py
doc/: dependencies.md
msg/: DetectionResults.msg
src/: detect_images.py  detect_one_image.py  lib_yolo_detect.py  ros_server.py  train.py
src/PyTorch_YOLOv3/: README.md  models.py  test.py
src/PyTorch_YOLOv3/utils/: augmentations.py  datasets.py  logger.py  parse_config.py  utils.py
test_data/: video.avi
tool_scripts/: images2video.py
utils/: lib_augment_image.py  lib_common_funcs.py  lib_datasets.py  lib_plot.py  lib_proc_image.py  lib_ros_rgbd_pub_and_sub.py  lib_yolo_datasets.py  lib_yolo_funcs.py  lib_yolo_plot.py
weights/: README.md
